change mistakes