@@ -1,26 +1,22 @@
 package com.eleks.academy.whoami.service.impl;
 
-import java.util.List;
-import java.util.Optional;
-import java.util.function.UnaryOperator;
-import java.util.stream.Collectors;
-
-import org.springframework.http.HttpStatus;
-import org.springframework.stereotype.Service;
-import org.springframework.web.server.ResponseStatusException;
-
-import com.eleks.academy.whoami.core.Game;
-import com.eleks.academy.whoami.core.impl.Answer;
+import com.eleks.academy.whoami.core.SynchronousGame;
+import com.eleks.academy.whoami.core.SynchronousPlayer;
 import com.eleks.academy.whoami.core.impl.PersistentGame;
-import com.eleks.academy.whoami.core.impl.StartGameAnswer;
 import com.eleks.academy.whoami.model.request.CharacterSuggestion;
 import com.eleks.academy.whoami.model.request.NewGameRequest;
 import com.eleks.academy.whoami.model.response.GameDetails;
 import com.eleks.academy.whoami.model.response.GameLight;
+import com.eleks.academy.whoami.model.response.TurnDetails;
 import com.eleks.academy.whoami.repository.GameRepository;
 import com.eleks.academy.whoami.service.GameService;
-
 import lombok.RequiredArgsConstructor;
+import org.springframework.http.HttpStatus;
+import org.springframework.stereotype.Service;
+import org.springframework.web.server.ResponseStatusException;
+
+import java.util.List;
+import java.util.Optional;
 
 @Service
 @RequiredArgsConstructor
@@ -30,7 +26,9 @@ public class GameServiceImpl implements GameService {
 
 	@Override
 	public List<GameLight> findAvailableGames(String player) {
-		return this.gameRepository.findAllAvailable(player).map(GameLight::of).collect(Collectors.toList());
+		return this.gameRepository.findAllAvailable(player)
+				.map(GameLight::of)
+				.toList();
 	}
 
 	@Override
@@ -41,35 +39,55 @@ public class GameServiceImpl implements GameService {
 	}
 
 	@Override
-	public void enrollToGame(String id, String player) {
-		this.gameRepository.findById(id).filter(Game::isAvailable)
-		        .ifPresentOrElse(game -> game.makeTurn(new Answer(player)), () -> {
-			        throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Cannot enroll to a game");
-		        });
+	public SynchronousPlayer enrollToGame(String id, String player) {
+		return this.gameRepository.findById(id)
+				.filter(SynchronousGame::isAvailable)
+				.map(game -> game.enrollToGame(player))
+				.orElseThrow(
+						() -> new ResponseStatusException(HttpStatus.FORBIDDEN, "Cannot enroll to a game")
+				);
 	}
 
 	@Override
 	public Optional<GameDetails> findByIdAndPlayer(String id, String player) {
-		return this.gameRepository.findById(id).filter(game -> game.hasPlayer(player)).map(GameDetails::of);
+		return this.gameRepository.findById(id)
+				.filter(game -> game.findPlayer(player).isPresent())
+				.map(GameDetails::of);
 	}
 
 	@Override
 	public void suggestCharacter(String id, String player, CharacterSuggestion suggestion) {
-		this.gameRepository.findById(id).filter(game -> game.hasPlayer(player))
-		        .ifPresentOrElse(game -> game.makeTurn(new Answer(player, suggestion.getCharacter())), () -> {
-			        throw new ResponseStatusException(HttpStatus.NOT_FOUND, HttpStatus.NOT_FOUND.getReasonPhrase());
-		        });
+		this.gameRepository.findById(id)
+				.flatMap(game -> game.findPlayer(player))
+				.ifPresent(p -> p.setCharacter(suggestion.getCharacter()));
 	}
 
 	@Override
 	public Optional<GameDetails> startGame(String id, String player) {
-		UnaryOperator<Game> startGame = game -> {
-			game.makeTurn(new StartGameAnswer(player));
+		return this.gameRepository.findById(id)
+				.map(SynchronousGame::start)
+				.map(GameDetails::of);
+	}
 
-			return game;
-		};
+	@Override
+	public void askQuestion(String gameId, String player, String message) {
+		this.gameRepository.findById(gameId)
+				.ifPresent(game -> game.askQuestion(player, message));
+	}
 
-		return this.gameRepository.findById(id).map(startGame).map(GameDetails::of);
+	@Override
+	public Optional<TurnDetails> findTurnInfo(String id, String player) {
+		return Optional.empty();
+	}
+
+	@Override
+	public void submitGuess(String id, String player, String guess) {
+
+	}
+
+	@Override
+	public void answerQuestion(String id, String player, String answer) {
+
 	}
 
 }
